# U-00DC-Sprache

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  About block initializer.md  Build system sources and imports management.md   Build system.md  LICENSE  Mixins.txt  O Korutinah.txt  O biblioteke asinhronnosti.md  O glubokoj kosvennosti ssylok.md  O hešah i heš-tabliçah.md  O junit-testirovanii.txt  O lämbdah.txt  O množestvennyh vnutrennih tegah.txt  O peredelke asinhronnyh funkçij.md  Ob iniçializatore dlä zapolnenija massivov.md  Ob iteratorah.md  Packages.md  Predloženije ob ogranicennyh ssylkah vnutri struktur na tipy so ssylkami vnutri.md  README.md  Static interfaces.md  async_functions.txt  async_inlining_error.u  ci_build.sh  compiler1_crash.u  copy_value_with_mutable_reference.u  coro_test.ll  destructor_mutation_bug.u  external_await_test.u  feature_graph.fzm  reference_notation_structs_test.u  travis_build.sh  u8_constexpr_index.u  u8_index.u  Ü design principles.md  Ü-Sprache todo list.txt
Compiler/: All.pro  CMakeLists.txt  Common.pri  Compiler.pro  CompilerLib.pro  Tests.pro  annotated_tests_run.py  Ü-Interpreter.cbp
Compiler/compiler_lib_py/: compiler_lib_py.cpp  compiler_lib_py_test.py
Compiler/cpp_linkage_test/: cpp_linkage.cpp  cpp_linkage.u
Compiler/inline_linkage_test/: a.u  b.u  c.u  inc.u
Compiler/py_tests/: char_test.py  code_builder_test.py  constexpr_functions_errors_test.py  constexpr_functions_test.py  constexpr_structs_test.py  enable_if_test.py  function_pointers_errors_test.py  function_pointers_test.py  function_templates_errors_test.py  function_templates_test.py  inheritance_errors_test.py  inheritance_test.py  methods_generation_test.py  order_independent_name_resolving_test.py  overloading_resolution_test.py  public_private_protected_test.py  py_tests.cpp  py_tests.py  py_tests_common.py  reference_cast_operators_test.py  reference_check_for_templates_test.py  stack_variables_move_errors_test.py  stack_variables_move_test.py  static_if_test.py  string_literals_test.py  type_templates_overloading_test.py  typeinfo_test.py  unsafe_test.py  virtual_functions_test.py
Compiler/src/: assert.hpp  code_builder.cpp  code_builder.hpp  code_builder_errors.cpp  code_builder_errors.hpp  code_builder_expressions.cpp  code_builder_global_things_build.cpp  code_builder_initializers.cpp  code_builder_method_gen.cpp  code_builder_names_scope_build.cpp  code_builder_names_scope_prepare.cpp  code_builder_overloading_resolution.cpp  code_builder_preresolve.cpp  code_builder_reference_checking.cpp  code_builder_resolve.cpp  code_builder_templates.cpp  code_builder_typeinfo.cpp  code_builder_types.cpp  code_builder_types.hpp  code_builder_virtual.cpp  constexpr_function_evaluator.cpp  constexpr_function_evaluator.hpp  i_code_builder.hpp  inverse_polish_notation.cpp  inverse_polish_notation.hpp  keywords.cpp  keywords.hpp  lang_types.cpp  lang_types.hpp  lexical_analyzer.cpp  lexical_analyzer.hpp  main.cpp  mangling.cpp  mangling.hpp  operators.cpp  operators.hpp  program_string.cpp  program_string.hpp  push_disable_llvm_warnings.hpp  source_graph_loader.cpp  (+8 more)
Compiler/test_programs/: cpp_linkage.cpp  cpp_linkage.u  empty.u
Compiler/tests/: class_templates_errors_test.cpp  class_templates_test.cpp  classes_declaration_errors_test.cpp  classes_declaration_test.cpp  code_builder_errors_test.cpp  constexpr_errors_test.cpp  global_variables_errors_test.cpp  halt_test.cpp  imports_errors_test.cpp  imports_test.cpp  initializers_test.cpp  mutability_errors_test.cpp  namespaces_errors_test.cpp  namespaces_test.cpp  operators_overloading_errors_test.cpp  operators_priority_test.cpp  reference_check_for_structs_test.cpp  reference_check_test.cpp  temp_variables_moving_test.cpp  tests.cpp  tests.hpp  tests_common.hpp  typedefs_errors_test.cpp  variables_state_merge_test.cpp
Compiler/ustlib/: container_utils.u  minmax.u  pointer.u  vector.u
Compiler/ustlib_test/: allocations_test.u  minmax_test.u  vector_errors_test.u  vector_test.u
grammar_validator/: CMakeLists.txt  grammar.bnf  main.cpp
source/: CMakeLists.txt  annotated_tests_run.py  bin2c.cmake  built_in_macros.u  errors_list.hpp  keywords_list.txt  u_kde_syntax_highlighting.xml
source/build_system/: CMakeLists.txt  README.md  build.u  build_graph.u  build_graph.uh  configuration_options.u  configuration_options.uh  entry.uh  filesystem.uh  json.u  json.uh  logger.u  logger.uh  main.u  make_dep_file.u  make_dep_file.uh  options.u  options.uh  package_transformation.u  package_transformation.uh  package_validation.u  package_validation.uh  path.u  path.uh  shared_library.uh  string_utils.uh  syntax_analyzer_macro_expansion_infinite_recursion.u  target_triple.u  target_triple.uh
source/code_builder_lib/: class.cpp  class.hpp  code_builder.cpp  code_builder.hpp  code_builder_block_elements.cpp  code_builder_debug_info.cpp  code_builder_errors.cpp  code_builder_errors.hpp  code_builder_expressions.cpp  code_builder_global_things_build.cpp  code_builder_initializers.cpp  code_builder_method_gen.cpp  code_builder_names_scope_prepare.cpp  code_builder_overloading_resolution.cpp  code_builder_reference_checking.cpp  code_builder_resolve.cpp  code_builder_templates.cpp  code_builder_typeinfo.cpp  code_builder_types.cpp  code_builder_types.hpp  code_builder_virtual.cpp  constexpr_function_evaluator.cpp  constexpr_function_evaluator.hpp  deduced_template_parameter.cpp  deduced_template_parameter.hpp  enum.cpp  enum.hpp  error_reporting.cpp  error_reporting.hpp  errors_list.hpp  function_context.cpp  function_context.hpp  i_code_builder.hpp  lang_types.cpp  lang_types.hpp  mangling.cpp  mangling.hpp  names_scope.cpp  names_scope.hpp  pop_llvm_warnings.hpp  (+10 more)
source/code_builder_lib_common/: CMakeLists.txt  async_calls_inlining.cpp  async_calls_inlining.hpp  code_builder_errors.cpp  code_builder_errors.hpp  constexpr_function_evaluator.cpp  constexpr_function_evaluator.hpp  execution_engine.cpp  execution_engine.hpp  interpreter.cpp  interpreter.hpp  long_stable_hash.cpp  long_stable_hash.hpp  mangling.hpp  (+6 more)
(+2381 files in other folders)
